# CDS

./: README.md  data_processing.ipynb  notes.ipynb  notes_code.ipynb  scripy.ipynb  test.txt
cpuCode/c++/: CMakeLists.txt  Makefile  main.cpp
cpuCode/c++/inc/: common.h  graph.h  helpers.h
cpuCode/c++/src/: helpers.cpp
cpuCode/java/: README.md
cpuCode/java/kds/: sources.txt
cpuCode/java/kds/datasets/: graph.txt  test.txt  test3.txt
cpuCode/java/kds/motif/: 3line.txt  3star.txt  3triangle.txt  4clique.txt  4line.txt  4star.txt  4triangle.txt  5clique.txt  5loop.txt  6clique.txt  6star.txt  basket.txt  chordal-5-loop.txt  chordal.txt  edge.txt  square.txt  tri-line.txt  triangle.txt
cpuCode/java/kds/result/: Efficiency.txt
cpuCode/java/kds/src/hku/: Config.java
cpuCode/java/kds/src/hku/algo/cds/: AppTest.java  CDSdecompose.java  ExactTest.java  KList.java  TDCDS.java
cpuCode/java/kds/src/hku/algo/exist/: Appalgo.java  DynamicExactalgo.java  Exactalgo.java  FlowNetwork.java  MDS.java
cpuCode/java/kds/src/hku/algo/findgeneralpattern/: FindMotif.java
cpuCode/java/kds/src/hku/algo/maxflow/: FindMinCut.java
cpuCode/java/kds/src/hku/algo/pdscoredecompose/: DiamondMotif.java  GeneralMotif.java  StarMotif.java
cpuCode/java/kds/src/hku/algo/pdsenumeration/: EnumBasket.java  EnumCstar.java  EnumThTri.java  EnumTwoTri.java
cpuCode/java/kds/src/hku/algo/prune/: Component.java  ComponentDecom.java  DensestCore.java  InvalidEdgePruning.java  LocateCore.java  MotifPruning.java
cpuCode/java/kds/src/hku/util/: Combination.java  DataReader.java  KCore.java  Log.java
cpuCode/parallel/: CMakeLists.txt  Makefile  main.cpp
cpuCode/parallel/inc/: common.h  graph.h  helpers.h
cpuCode/parallel/src/: graph.cpp  helpers.cpp
cudaCode/: CMakeLists.txt  cdata.txt  main.cu  testcuda.cu
cudaCode/inc/: common.h  gpuMemoryAllocation.cuh  gpuMemoryAllocation.h  graph.h  helpers.cuh  motif.h
cudaCode/src/: common.cpp  gpuMemoryAllocation.cc  gpuMemoryAllocation.cu  graph.cpp  helpers.cc  helpers.cu  helpers1.cc  motif.cpp
cudaCode/utils/: cuda_utils.cuh
datasets/: test.cu
datasets/processed/: as_caida.txt  ca_hepth.txt
results/: script.ipynb
results/CPU/: Efficiency (1).txt
results/GPU/: final.txt
results/densestCore/CPU/: AutonomousSystems.txt  Deezer.txt  crocodileWikipedia.txt  emails.txt  randomGraph1.txt  randomGraph3.txt  randomGraph5.txt
results/densestCore/GPU/: AutonomousSystems.txt  Deezer.txt  coauthoring.txt  crocodileWikipedia.txt  randomGraph1.txt  randomGraph2.txt  randomGraph3.txt  test2.txt
results/densestCore/newGPU/: randomGraph1.txt  randomGraph2.txt  randomGraph3.txt  randomGraph4.txt
